Fixed z-index for slides.

--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ main > div:not(.active) {
 
 main > .slide {
     height: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 main > .slide > img {
